--- a/my-blog/src/main/resources/static/index.html
+++ b/my-blog/src/main/resources/static/index.html
@@ -1,10 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>小可爱相册</title>
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .box {
+            width: 400px;
+            height: 400px;
+          /*  border: solid 4px red;*/
+            margin: 30px auto;
+            perspective: 1200px;
+        }
+
+        .cube {
+            width: 300px;
+            height: 300px;
+            margin: 50px;
+            /*border: solid 4px orange;*/
+            position: relative;
+            transform-style: preserve-3d;
+            animation: move 3s infinite linear;
+            transform-origin: center center 150px;
+        }
+        .side{
+            width: 300px;
+            height: 300px;
+            text-align: center;
+            line-height: 300px;
+            position: absolute;
+        }
+        .side:nth-of-type(1){
+            background-color: orange;
+            opacity: 0.4;
+        }
+        .side:nth-of-type(2){
+            background-color: blue;
+            opacity: 0.4;
+            transform: translateX(300px)rotateY(-90deg);
+            transform-origin: left;
+        }
+        .side:nth-of-type(3){
+            background-color: red;
+            opacity: 0.4;
+            transform: translateX(-300px)rotateY(90deg);
+            transform-origin: right;
+        }
+        .side:nth-of-type(4){
+            background-color: pink;
+            opacity: 0.4;
+            transform: translateY(-300px)rotateX(-90deg);
+            transform-origin: bottom;
+        }
+        .side:nth-of-type(5){
+            background-color: blanchedalmond;
+            opacity: 0.4;
+            transform: translateY(300px)rotateX(90deg);
+            transform-origin: top;
+        }
+        .side:nth-of-type(6){
+            background-color: white;
+            opacity: 0.4;
+            transform: translateZ(300px);
+        }
+
+        @keyframes move{
+            from{
+                transform: rotateY(0deg);
+            }
+            to{
+                transform: rotateY(360deg);
+            }
+        }
+    </style>
 </head>
+
 <body>
-<h3>Index</h3>
+<div>
+    <a href="./Backgammon.html">五子棋</a>
+</div>
+    <div class="box">
+        <div class="cube">
+            <!--后面-->
+            <div class="side"><img src="img/1.png" width="300px" height="300px" alt=""></div>
+            <!--右面-->
+            <div class="side"><img src="img/2.jpg" width="300px" height="300px" alt=""></div>
+            <!--左面-->
+            <div class="side"><img src="img/3.png" width="300px" height="300px" alt=""></div>
+            <!--上面-->
+            <div class="side"><img src="img/1.png" width="300px" height="300px" alt=""></div>
+            <!--下面-->
+            <div class="side"><img src="img/2.jpg" width="300px" height="300px" alt=""></div>
+            <!--正面-->
+            <div class="side"><img src="img/44.jpg" width="300px" height="300px" alt=""></div>
+        </div>
+    </div>
 </body>
+
 </html>
